# finance-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  coder.agent.md  debugger.agent.md  designer.agent.md  devops.agent.md  orchestrator.agent.md  postgresql-dba.agent.md  qa.agent.md  reviewer.agent.md  technical-writer.agent.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  performance.instructions.md  rust.instructions.md  security.instructions.md  testing.instructions.md  typescript.instructions.md
.github/prompts/: code-review.prompt.md  debug-issue.prompt.md  generate-docs.prompt.md  refactor-code.prompt.md  setup-component.prompt.md  write-tests.prompt.md
.github/workflows/: backend-ci.yml  copilot-setup-steps.yml  frontend-ci.yml
.opencode/: package.json
.opencode/agents/: architect.md  coder.md  debugger.md  designer.md  devops.md  frontend.md  orchestrator.md  postgresql-dba.md  qa.md  reviewer.md  rust-backend.md  technical-writer.md
.opencode/commands/: build.md  code-review.md  debug-issue.md  generate-docs.md  refactor-code.md  setup-component.md  test-backend.md  write-tests.md  (+1 more)
.serena/: project.yml
backend/: Cargo.toml  Dockerfile  deny.toml
backend/.config/: nextest.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260621_000001_create_schema.rs  m20260621_000002_seed_categories.rs  main.rs
backend/migrations/: 001_initial_schema.sql  002_seed_categories.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs
backend/src/api/: accounts.rs  categories.rs  categorize.rs  import.rs  mod.rs  stats.rs  transactions.rs
backend/src/entities/: accounts.rs  categories.rs  import_logs.rs  mod.rs  transactions.rs
backend/src/models/: category.rs  mod.rs  transaction.rs
backend/src/parsers/: alior.rs  common.rs  mod.rs  pekao.rs  revolut.rs
backend/src/services/: categorize.rs  import.rs  mod.rs
frontend/: .prettierignore  Dockerfile  eslint.config.mjs  knip.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+11 files in other folders)
