[package]
name = "finance-tracker"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["runtime-tokio-native-tls", "sqlx-postgres", "with-chrono", "with-rust_decimal", "with-json"] }
migration = { path = "./migration" }
clap = { version = "4", features = ["derive"] }
csv = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
dotenvy = "0.15"
tower-http = { version = "0.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", features = ["json"] }
hex = "0.4"
base64 = "0.22"
